--- a/vignettes/multiLME-vignette.Rmd
+++ b/vignettes/multiLME-vignette.Rmd
@@ -52,7 +52,7 @@ where:
 - \( \beta_j \) are the fixed effect coefficients, \( b_{ij} \) are the individual-specific random effects, and \( \epsilon_{ij}(t) \) are residual error terms,
 - \( m_{ij}(t) = x_{ij}^\top(t) \beta_j + z_{ij}^\top(t) b_{ij} \) denotes the mean (noise-free) trajectory of outcome \( j \).
 
-Notably, the model for outcome 1 includes the **underlying value** of outcome 2 at time \( t \), represented by the term
+The model for outcome 1 includes the **underlying value** of outcome 2 at time \( t \), represented by the term
 
 $$
 m_{i2}(t),
@@ -319,7 +319,7 @@ where:
 - \( \beta_j \) are the fixed effect coefficients, \( b_{ij} \) are the individual-specific random effects, and \( \epsilon_{ij}(t) \) are residual error terms,
 - \( m_{ij}(t) = x_{ij}^\top(t) \beta_j + z_{ij}^\top(t) b_{ij} \) denotes the mean (noise-free) trajectory of outcome \( j \).
 
-Notably, the model for outcome 1 includes the **instantaneous rate of change** of outcome 2: specifically, the derivative term
+The model for outcome 1 includes the **instantaneous rate of change** of outcome 2: specifically, the derivative term
 
 $$
 \frac{d}{dt} m_{i2}(t)
@@ -439,7 +439,7 @@ where:
 - \( \beta_j \) are the fixed effect coefficients, \( b_{ij} \) are the individual-specific random effects, and \( \epsilon_{ij}(t) \) are residual error terms,
 - \( m_{ij}(t) = x_{ij}^\top(t) \beta_j + z_{ij}^\top(t) b_{ij} \) denotes the mean (noise-free) trajectory of outcome \( j \).
 
-Notably, the model for outcome 1 includes a **historical effect** of outcome 2: specifically, the integral term
+The model for outcome 1 includes a **historical effect** of outcome 2: specifically, the integral term
 
 $$
 \int_{t-2}^{t} m_{i2}(s) \, ds
@@ -576,7 +576,7 @@ where:
 - \( \beta_j \) are the fixed effect coefficients, \( b_{ij} \) are the individual-specific random effects, and \( \epsilon_{ij}(t) \) are residual error terms,
 - \( m_{ij}(t) = x_{ij}^\top(t) \beta_j + z_{ij}^\top(t) b_{ij} \) denotes the mean (noise-free) trajectory of outcome \( j \).
 
-Notably, the model for outcome 1 includes the **underlying value** of outcome 2 at time \( t \), represented by the term
+The model for outcome 1 includes the **underlying value** of outcome 2 at time \( t \), represented by the term
 
 $$
 m_{i2}(t),
